--- a/node-bot/package.json
+++ b/node-bot/package.json
@@ -2,10 +2,10 @@
   "name": "node-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js --exec 'node'"
+    "start": "nodemon app.js --exec 'node'"
   },
   "repository": {
     "type": "git",
