--- a/node-bot/package.json
+++ b/node-bot/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "redis": "^3.0.2",
     "slackbots": "^1.2.0"
   },
   "devDependencies": {
