--- a/node-bot/package.json
+++ b/node-bot/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js --exec 'node'"
+    "start": "nodemon --exec ts-node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,11 @@
     "slackbots": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.1",
+    "@types/redis": "^2.8.21",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.10.1",
+    "typescript": "^3.9.2"
   }
 }
