--- a/node-bot/package.json
+++ b/node-bot/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node app.js"
+    "start": "nodemon --exec ts-node app.ts"
   },
   "repository": {
     "type": "git",
